--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants responsive {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 :root {
   --primary-color: #1E2326;
   --secondary-color: #fff;
+}
+
+body{
+  @apply no-scrollbar
 }
 
 html {
